# aptos-dynamic-script-rust

./: .gitignore  Cargo.toml
aptos-script/: Move.toml
aptos-script/sources/: handle_multi.move
src/: main.rs  script_format.rs
